[gd_scene load_steps=5 format=3 uid="uid://vxbqlwfc0s81"]

[ext_resource type="Theme" uid="uid://dr1p05vgqcplh" path="res://scenes/custom_bouton_theme.tres" id="1_1m66n"]
[ext_resource type="Script" path="res://scenes/Choix_Conduite_Epreuve/scripts/Choix_Conduite_Epreuve.gd" id="1_gqww3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_usqdw"]
bg_color = Color(0.842687, 0, 0.00884624, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t2m12"]
bg_color = Color(1, 0.168627, 0.184314, 1)

[node name="ChoixConduiteEpreuve" type="Node2D"]
script = ExtResource("1_gqww3")

[node name="ColorRect1" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
size_flags_horizontal = 3
color = Color(0.901961, 0.901961, 0.901961, 1)

[node name="Label" type="Label" parent="."]
offset_left = 384.0
offset_top = 128.0
offset_right = 1472.0
offset_bottom = 192.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "Choix conduite Ã©preuve"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Parcours_Arret" type="Button" parent="."]
offset_left = 736.0
offset_top = 232.0
offset_right = 1120.0
offset_bottom = 328.0
size_flags_horizontal = 4
theme = ExtResource("1_1m66n")
theme_override_font_sizes/font_size = 25
text = "Parcours Arret"

[node name="Parcours_obstacle" type="Button" parent="."]
offset_left = 736.0
offset_top = 360.0
offset_right = 1120.0
offset_bottom = 456.0
size_flags_horizontal = 0
theme = ExtResource("1_1m66n")
theme_override_font_sizes/font_size = 25
text = "Parcours Obstacle"

[node name="Parcours_reculons" type="Button" parent="."]
offset_left = 736.0
offset_top = 488.0
offset_right = 1120.0
offset_bottom = 584.0
theme = ExtResource("1_1m66n")
theme_override_font_sizes/font_size = 25
text = "Parcours Reculons"

[node name="Parcours_virage" type="Button" parent="."]
offset_left = 736.0
offset_top = 616.0
offset_right = 1120.0
offset_bottom = 712.0
theme = ExtResource("1_1m66n")
theme_override_font_sizes/font_size = 25
text = "Parcours Virage"

[node name="Retourner_acceuil" type="Button" parent="."]
offset_left = 784.0
offset_top = 760.0
offset_right = 1072.0
offset_bottom = 840.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_usqdw")
theme_override_styles/hover = SubResource("StyleBoxFlat_t2m12")
text = "Retourner au menu
principal"

[connection signal="pressed" from="Parcours_Arret" to="." method="_on_parcours_arret_pressed"]
[connection signal="pressed" from="Parcours_obstacle" to="." method="_on_parcours_obstacle_pressed"]
[connection signal="pressed" from="Parcours_reculons" to="." method="_on_parcours_reculons_pressed"]
[connection signal="pressed" from="Parcours_virage" to="." method="_on_parcours_virage_pressed"]
[connection signal="pressed" from="Retourner_acceuil" to="." method="_on_retourner_acceuil_pressed"]
